--- a/maketMyStyles.css
+++ b/maketMyStyles.css
@@ -160,11 +160,18 @@
     display: flex;
     flex-direction: column;
 }
-
+a{
+    display: flex;
+    flex-direction: row;
+    justify-items: center;
+}
+span{
+    margin-left: 0.3rem;
+}
 h1 {
-    font-size: 1.8rem;
+    font-size: 2.1rem;
     letter-spacing: .2rem;
-    color: #25083d;
+    color: #360c59;
 }
 
 h2 {
