--- a/maketMyStyles.css
+++ b/maketMyStyles.css
@@ -320,7 +320,10 @@ a {
     width: 1.4rem;
     height: 1.4rem;
 }
-
+.bewerb{
+  color: #6c0509;
+    font-size: 1.3rem;
+}
 
 @media (min-width: 120px) and
 (max-width: 1024px) {
