--- a/maketMyStyles.css
+++ b/maketMyStyles.css
@@ -202,7 +202,15 @@ img {
     width: 90%;
     border-radius: 0;
 }
+.imgDocD{
+    width: 50rem;
+    height: 50%;
+    border-radius: 0;
 
+}
+/*.blockD{*/
+/*    height: 35rem;*/
+/*}*/
 .section ul {
     list-style: none;
     padding: 0;
